--- a/rr.1
+++ b/rr.1
@@ -121,9 +121,9 @@ rr -Ov -n5 feh -Z --bg-center -- *
 Play all mp4 videos under a specific folder in fullscreen,
 limit to what
 .Xr mpv 1
-can manage, do not randomize files:
+can manage, exit in case of error, do not randomize files:
 .Bd -literal -offset indent
-rr -n1500 -rN -o '.*.mp4' mpv -fs -- videos
+rr -n1500 -erN -o '.*.mp4' mpv -fs -- videos
 .Ed
 .Pp
 .Sh AUTHORS
