--- a/rr.1
+++ b/rr.1
@@ -126,6 +126,18 @@ can manage, exit in case of error, do not randomize files:
 rr -n1500 -erN -o '.*.mp4' mpv -fs -- videos
 .Ed
 .Pp
+Display a random line from
+.Ar file:
+.Bd -literal -offset indent
+rr -n2 -O -l file echo
+.Ed
+.Pp
+Same thing, different options
+.Ar file:
+.Bd -literal -offset indent
+rr -1 -l file echo
+.Ed
+.Pp
 .Sh AUTHORS
 The
 .Nm
