--- a/rr.1
+++ b/rr.1
@@ -135,13 +135,12 @@ rr -n1500 -erN -o '.*.mp4' mpv -fs -- videos
 .Ed
 .Pp
 Display a random line from
-.Ar file:
+.Ar file :
 .Bd -literal -offset indent
 rr -n2 -O -l file echo
 .Ed
 .Pp
-Same thing, different options
-.Ar file:
+Same thing, different options:
 .Bd -literal -offset indent
 rr -1 -l file echo
 .Ed
