document -D more precisely
explain what a leaf directory is

--- a/rr.1
+++ b/rr.1
@@ -46,7 +46,8 @@ The options are as follows:
 .It Fl 1
 Keep just one random parameter for running.
 .It Fl D
-Scan parameters and recursively add each leaf directory.
+Scan parameters and recursively add each leaf directory, e.g.,
+each directory that does contain only files and not subdirectories.
 .It Fl d
 Without this flag,
 .Ar --
