allow standard input for -l

--- a/rr.1
+++ b/rr.1
@@ -88,6 +88,9 @@ and case-insensitive after.
 Add the contents of file
 .Ar list
 to the parameters, each line being a single parameter.
+As usual,
+.Sq -
+stands for standard input.
 .It Fl m Ar margin
 If arguments run too long,
 .Nm
